2012-01-17  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: fixed compilation without ssl.

2011-12-28  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, ftpclass.h: fixed the case when home is unknown;
	  accept new cwd when real_cwd equals the new cwd.

2011-12-14  Alexander V. Lukyanov <lav@yars.free.net>

	* QueueFeeder.cc, QueueFeeder.h: (JobCount) new method.
	* CmdExec.cc, CmdExec.h, lftp.cc: new settings cmd:at-exit-bg,
	  cmd:at-finish, cmd:at-queue-finish.
	* MirrorJob.h, mkdirJob.h: use 0,1 exit codes.
	* Torrent.cc: fixed status command line.

2011-12-13  Alexander V. Lukyanov <lav@yars.free.net>

	* commands.cc: fixed exit code of queue command.

2011-12-09  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: follow local symlinks with -L option.

2011-12-06  Alexander V. Lukyanov <lav@yars.free.net>

	* Torrent.cc: open files with CLOEXEC flag.
	* misc.cc, misc.h, Fish.cc, LocalAccess.cc: (shell_encode) return xstring ref.

2011-11-18  Alexander V. Lukyanov <lav@yars.free.net>

	* TimeDate.cc: fixed IsoDateTime (added seconds).
	* lftp_rl.c: save timestamps in history; show them.

2011-11-16  Alexander V. Lukyanov <lav@yars.free.net>

	* FileAccess.cc: fixed "URL mismatch" message for root directory.

2011-11-09  Alexander V. Lukyanov <lav@yars.free.net>

	* Http.cc: fixed NULL-crash on ssl.
	* lftp.cc: (attach) check process existence; remove stale sockets.

2011-10-06  Alexander V. Lukyanov <lav@yars.free.net>

	* MirrorJob.cc: save the buffer of target_dir using alloca.
	* ResMgr.cc, ResMgr.h: (ResValue::to_tri_bool, *::QueryTriBool)
	  new methods; use const for const methods; remove ifdef0'ed code.
	* FileSetOutput.cc, commands.cc: use QueryTriBool.
	* ftpclass.cc, resource.cc: new setting ftp:use-tvfs.

2011-09-22  Alexander V. Lukyanov <lav@yars.free.net>

	* ftpclass.cc, FileAccess.cc, commands.cc:
	  use ParsedURL for URL path verification; compare path to home