@@ -1,3 +1,8 @@
+2012-01-20  Alexander V. Lukyanov <lav@yars.free.net>
+
+	* CmdExec.cc: fixed core dump on "local" command without
+	  arguments.
+
 2012-01-17  Alexander V. Lukyanov <lav@yars.free.net>
 
 	* Http.cc: fixed compilation without ssl.
